src/assets/main.css
@view-transition {
	navigation: auto;
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

:root {
	--h-size: 60ch;
	--border-size: 1px;
	--color-fg: #000;
	--color-bg: #FFF;
	--color-acc: #333;
	--color-border: #DDD;
	--color-link: #00C;
	--color-link-visited: #518;

	/* modular scale-ish; cf. https://www.modularscale.com/?1.5 */
	--spacing: 0.5rem;
	--spacing-sm1: calc(var(--spacing) * 0.667);
	--spacing-sm2: calc(var(--spacing) * 0.444);
	--spacing-lg1: calc(var(--spacing) * 1.5);
	--spacing-lg2: calc(var(--spacing) * 2.25);
	--spacing-lg3: calc(var(--spacing) * 3.375);

	/* outdent while keeping content box consistent */
	--border-outdent-left: var(--spacing-sm1);
	--spacing-outdent-left: calc(var(--spacing) + var(--border-outdent-left));
	--spacing-outdent-right: calc(var(--spacing) + var(--border-size));
}

html {
	background-color: var(--color-acc);
}
@media (prefers-reduced-motion: no-preference) {
	html {
		scroll-behavior: smooth;
	}
}

body {
	margin: 0;
	font-family: system-ui, sans-serif;
	font-size: 112.5%;
	line-height: 1.5;
	text-wrap: pretty;
	color: var(--color-fg);
	background-color: var(--color-bg);
}

main {
	--_offset: calc(2 * var(--border-size));
	--_spacing-left: calc(var(--spacing-outdent-left) + var(--_offset));
	--_spacing-right: calc(var(--spacing-outdent-right) + var(--_offset));

	max-width: calc(var(--h-size) + var(--_spacing-left) + var(--_spacing-right));
	min-height: 100vh;
	margin-inline: auto;
	padding-left: var(--_spacing-left);
	padding-right: var(--_spacing-right);
	padding-bottom: var(--spacing); /* XXX: hacky? */
}

h3 {
	font-size: 1.1em;
	font-variant: small-caps;
}

pre {
	overflow: auto;
}

code,
kbd {
	/* cf. https://mkhl.codeberg.page/monospace-font-size/ */
	font-family: "", monospace;
	font-size: 90%; /* XXX: magic number */
}

figure {
	margin: 0;
}
figcaption.is-filename {
	font-family: monospace;
	font-size: small;
}

a:link {
	color: var(--color-link);
}
a:visited {
	color: var(--color-link-visited);
}
a[href^="http://"],
a[href^="https://"] {
	--_size: 0.65rem; /* XXX: magic value */

	background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23666" viewBox="0 0 16 16"><path d="M1.5 3.5v11h11V10H14v5a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h5v1.5H1.5ZM16 1.2 7 10 6 9l8.9-9 1 1ZM7.5 0H16v1.5H7.5V0ZM16 0v8.5h-1.5V0H16Z"/></svg>');
	background-position: calc(100% - var(--_size) / 4) 60%; /* XXX: magic value */
	background-repeat: no-repeat;
	background-size: var(--_size);
	padding-right: calc(var(--_size) + var(--_size) / 2);
}

/* utilities */

.nonvisual:not(:focus, :active) {
	position: absolute;
	width: 1px;
	height: 1px;
	overflow: hidden;
	clip-path: inset(50%);
	white-space: nowrap;
}

.stack > * {
	margin-block: 0;
}
.stack > :not(summary) { /* XX: special-casing */
	display: block;
}
.stack > :not(.nonvisual:first-child) + * {
	margin-top: var(--spacing);
}
.stack > :is(h1, h2, h3) {
	margin-top: var(--spacing-lg2);
}

.content-type {
	margin-left: var(--spacing);
	font-size: 0.8rem; /* XXX: magic value */

	&:is(a) { /* XXX: compromises a11y in favor of design */
		text-decoration: none;
		color: var(--color-fg);
	}

	&::before{
		content: "📝 ";
		content: "📝 " / "";
		content: attr(data-type, "📝") " " / "";
	}
}

/* redirect notice */

.redirect-notice {
	text-align: center;
	font-weight: bold;
}

.redirect-notice small {
	display: block;
	margin-top: 0.5em;
	font-weight: normal;
}

/* site header */

.site-header {
	background-color: var(--color-acc);
}
.site-header,
.site-header a {
	color: var(--color-bg);
}

.site-header nav {
	display: flex;
	gap: var(--spacing);
	flex-wrap: wrap; /* just to be safe */
	align-items: center;
}

.site-header a {
	padding: var(--spacing);

	&:focus-visible,
	&:focus-visible::before { /* required due to decoration below */
		--_size: 2px;

		outline: var(--_size) solid dodgerblue;
		outline-offset: calc(-1 * var(--_size));
	}
}

.site-header a:first-of-type {
	padding-left: var(--spacing-lg3);
}
.site-header a:first-of-type + * {
	margin-left: var(--spacing-lg3);
}

/* decoration */
.site-header a:first-of-type,
.site-header a:first-of-type > * {
	position: relative;
}
.site-header a:first-of-type::before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: calc(100% + var(--spacing-lg3));
	height: 100%;
	background-color: var(--color-fg);
	transform: skew(-30deg);
	transform-origin: top;
}

/* topics */

.topics > * { /* NB: vertical spacing corresponds to `.stack` */
	margin-block: 0;
}
.topics > dt ~ dt {
	margin-top: var(--spacing);
}

.topics dd {
	margin-left: 0;
}

.topics ul {
	margin-block: 0;
	padding-left: var(--spacing-lg2);
}

/* article */

.article > header {
	display: grid;
	row-gap: var(--spacing); /* ≙ `.stack` */
	grid-template-columns: auto 1fr;
	view-transition-name: var(--vt-name);

	> * {
		margin-block: 0; /* ≙ `.stack` */
	}

	> :is(h1, h2, .teaser) {
		grid-column: 1 / -1;
	}

	> .content-type {
		grid-column: 2 / -1;
		grid-row: 2;
		margin-left: var(--spacing-lg2);
		white-space: nowrap;
	}
}
article.article header { /* collection instead of entity -- XXX: brittle */
	row-gap: var(--spacing-sm2);
}

.article > header .metadata {
	min-width: 12rem; /* XXX: magic value */
	margin-top: 0;
	font-size: small;
}
.article > header .metadata,
.article > header .metadata a {
	color: var(--color-acc);
}
.article > header .metadata b {
	font-weight: normal;
}
.article > header .metadata * + *::before {
	content: "• ";
}

.article > footer {
	font-size: small;
	text-align: right;
	color: var(--color-acc);
}

.article > footer .feedback {
	margin-bottom: 0;
	text-align: left;
}

.article .permalink {
	font-size: 0.8rem; /* XXX: magic value */
	color: var(--color-acc);
	transition: none 0.25s ease-in-out;
	transition-property: opacity, text-decoration-color;

	&:not(:focus, :hover, :active) {
		text-decoration-color: color-mix(in srgb, currentColor, transparent 50%);
		opacity: 0.5;
	}
}

.redirect-notice, /* XXX: does not belong here */
.article aside:not(.footnote),
.article .infobox {
	border-width: calc(3 * var(--border-size)) 0; /* XXX: magic value */
	border-style: solid;
	border-color: rgba(110, 140, 192, 0.8); /* XXX: magic value */
	padding: var(--spacing) var(--spacing-lg3); /* NB: also accounts for outdent */
	background-color: rgba(220, 232, 255, 0.2); /* XXX: magic value */
}
.article aside:not(.footnote).is-compact,
.article .infobox {
	border-block-width: var(--border-size);
	font-size: small;
}

.article .infobox {
	border-color: #CCCCA5;
	padding: var(--spacing);
	background-color: #FFFFA555;
}

.article .disclosure > summary p {
	display: inline;
}

.article .footnote {
	margin-left: var(--spacing-lg3);
	font-size: small;
}
.article .footnote > sup:first-child {
	float: left;
	margin-left: calc(-2 * var(--spacing)); /* XXX: magic value */
}
.article a[href^="#fn:"] {
	font-size: x-small;
	vertical-align: super;
}
.article .footnote > sup:first-child::before,
.article a[href^="#fn:"]::before {
	content: "¶";
	display: inline-block;
	opacity: 0.3; /* XXX: hacky */
}
.article .footnote pre {
	font-size: inherit;
}

.article h1 {
	font-size: 1.7rem; /* XXX: magic value */
}

.article h2 {
	font-size: 1.6rem; /* XXX: magic value */
}

.article pre {
	margin-left: calc(-1 * var(--spacing-outdent-left));
	margin-right: calc(-1 * var(--spacing-outdent-right));
	border: var(--border-size) solid var(--color-border);
	border-left-width: var(--border-outdent-left);
	border-radius: var(--spacing);
	padding: var(--spacing);
	font-size: 1rem;
}
.article pre mark {
	text-shadow: none;
	background-color: #FF0; /* XXX: move definition elsewhere? */
}
.article pre mark mark { /* XXX: hacky? */
	background-color: #82FFAD; /* XXX: move definition elsewhere? */
}
/* override Prism defaults */
.article pre .token.class-name,
.article pre .token.function {
	color: var(--color-link-visited);
}
.article pre .token.regex,
.article pre .token.important,
.article pre .token.variable {
	color: #9A6E3A; /* corresponds to Prism default for `.operator` */
}
/* code block with file name -- XXX: awkward coupling */
.article figure:has(figcaption.is-filename) {
	position: relative;

	& pre:first-child + figcaption.is-filename {
		position: absolute;
		top: 0;
		right: calc(-1 * var(--spacing-outdent-right)); /* corresponds to `<pre>` */
		margin-top: 0; /* neutralizes `.stack` */
		border-top-right-radius:var(--spacing); /* corresponds to `<pre>` */
		border-bottom-left-radius:var(--spacing-sm1);
		padding: var(--spacing-sm1) var(--spacing);
		background-color: color-mix(in srgb, var(--color-border), transparent 50%);
	}
}

.article blockquote {
	margin-inline: 0;
	border-left: var(--spacing-sm1) solid var(--color-border);
	padding-block: var(--spacing-sm1);
	padding-left: var(--spacing);
	font-style: italic;
}
/* NB: vertical spacing corresponds to `.stack` (required for Markdown content) */
.article blockquote > *,
.article li,
.article li > p {
	margin-block: 0;
}
.article blockquote > * + *,
.article li + li,
.article li > p + p {
	margin-top: var(--spacing);
}

.article figure.is-compact {
	font-size: small;
}

.article img {
	display: block;
	max-width: 100%;
	margin-inline: auto;
}

.article ul {
	margin-left: 1rem;
	padding-left: 0;
}

.article iframe {
	width: 100%;
}
.article iframe:not([style]) {
	min-height: 20rem;
}

.article.article.article hr { /* XXX: smell; extra specificity overrides `.stack` */
	width: 80%;
	margin-block: var(--spacing-lg3);
}

.article [id^="ref:"]:target {
	position: relative;
}
.article [id^="ref:"]:target::before {
	--_size: var(--spacing-lg1);

	content: "";
	position: absolute;
	inset: calc(-0.5 * var(--_size)) 0 0;
	height: var(--_size);
	border-radius: var(--_size);
	/* XXX: move color definition elsewhere? */
	background: linear-gradient(0deg, transparent, cadetblue, transparent);
	opacity: 0.5;
	/* XXX: magic numbers */
	mask-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M40,-52 l0,60 l-10,0 l20,20 l20,-20 l-10,0 l0,-60 z" /></svg>'),
			linear-gradient(red, red);
	mask-composite: exclude;
	mask-size: 3rem auto;
}

